Aligned header correctly

--- a/resume-website/src/styles.scss
+++ b/resume-website/src/styles.scss
@@ -2,11 +2,4 @@
 body {
     color:#afafaf;
     background-color: #2d2d2d;
-    min-width: 100%;
-    float: left;
-}
-
-img {
-    height: 200px;
-    width: 200px;
 }
